test/e2e/fail_compile/type_errors/ct_required_runtime_result.cst
runtime fn source() -> num { 1 }

fn reserve(count: !runtime num) -> num {
    count
}

fn main() -> runtime num {
    reserve(source())
}
